[gd_scene load_steps=14 format=3 uid="uid://cvq7p2j13xv8m"]

[ext_resource type="Script" path="res://environment/Main.gd" id="1_a07rh"]
[ext_resource type="Texture2D" uid="uid://qyituie2u1m" path="res://environment/environmentModels/778185.jpg" id="2_6cgew"]
[ext_resource type="PackedScene" uid="uid://ckj1v2hd8f5ju" path="res://player/Player.tscn" id="4_8qp74"]
[ext_resource type="Script" path="res://environment/Camera3D.gd" id="6_qikrg"]
[ext_resource type="PackedScene" uid="uid://dr31ll2h5qouk" path="res://environment/environmentModels/Amphitheater.dae" id="7_61eal"]
[ext_resource type="Texture2D" uid="uid://dffvde4m8jce7" path="res://environment/environmentArt/waterFrames/water0.png" id="7_d07ed"]
[ext_resource type="PackedScene" uid="uid://dajjalm37no8a" path="res://ui/main_menu.tscn" id="7_hw2rg"]
[ext_resource type="AudioStream" uid="uid://is0beh04icp1" path="res://audio/music/Music.mp3" id="8_h3a5k"]
[ext_resource type="Script" path="res://environment/waterReflections.gd" id="17_hbvyi"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_42cdm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2jdvs"]
albedo_texture = ExtResource("2_6cgew")

[sub_resource type="CylinderMesh" id="CylinderMesh_u4oyr"]

[sub_resource type="Curve3D" id="Curve3D_cvafn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 25, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_a07rh")

[node name="KillCounter" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0
scale = Vector2(3, 3)

[node name="RoundTimerDisplay" type="Label" parent="."]
top_level = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
scale = Vector2(3, 3)
horizontal_alignment = 1

[node name="RoundNo" type="Label" parent="."]
offset_left = 1149.0
offset_right = 1150.0
offset_bottom = 73.0

[node name="WaterFrameChange" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HealthPowerUpTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="RoundTimer" type="Timer" parent="."]

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Ground" type="Node" parent="."]

[node name="GroundBody" type="StaticBody3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_mask = 0

[node name="CollisionShape" type="CollisionShape3D" parent="Ground/GroundBody"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
shape = SubResource("CylinderShape3D_42cdm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground/GroundBody"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_2jdvs")
mesh = SubResource("CylinderMesh_u4oyr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 0, 0)
light_color = Color(0.945098, 1, 1, 1)

[node name="Player" parent="." instance=ExtResource("4_8qp74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="DamageTimer" type="Timer" parent="Player"]
wait_time = 0.5
one_shot = true

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot" groups=["camera"]]
transform = Transform3D(1, 0, 0, 0, 0.951056, -0.309017, 0, 0.309017, 0.951056, 0, -10, 30)
projection = 1
size = 26.662
script = ExtResource("6_qikrg")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("Curve3D_cvafn")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 25, 0, 0)

[node name="Amphitheater" parent="." instance=ExtResource("7_61eal")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, -5, 0)

[node name="waterReflections" type="SpotLight3D" parent="."]
transform = Transform3D(0.909265, -0.416217, 0, -1.81934e-08, -3.97452e-08, 1, -0.416217, -0.909265, -4.37114e-08, 0, 40, 0)
light_energy = 0.713
light_projector = ExtResource("7_d07ed")
light_specular = 0.0
shadow_enabled = true
spot_range = 62.001
spot_attenuation = 1.57969e-05
spot_angle = 48.63
spot_angle_attenuation = 1e-05
script = ExtResource("17_hbvyi")

[node name="MainMenu" parent="." instance=ExtResource("7_hw2rg")]
unique_name_in_owner = true
offset_left = -1.0
offset_top = -2.0
offset_right = -1.0
offset_bottom = -2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_h3a5k")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="timeout" from="WaterFrameChange" to="waterReflections" method="_OnWaterFramechangeTimeout"]
[connection signal="timeout" from="HealthPowerUpTimer" to="." method="_onHealthPowerUpTimerTimeout"]
[connection signal="timeout" from="RoundTimer" to="." method="_onRoundTimerTimeout"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_onMobSpawnTimerTimeout"]
[connection signal="timeout" from="Player/DamageTimer" to="Player" method="_onDamageTimerTimeout"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
